; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/huawei/hinic/extr_hinic_hw_cmdq.c_clear_wqe_complete_bit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/huawei/hinic/extr_hinic_hw_cmdq.c_clear_wqe_complete_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hinic_cmdq = type { i32 }
%struct.hinic_cmdq_wqe = type { %struct.hinic_cmdq_direct_wqe, %struct.hinic_cmdq_wqe_lcmd }
%struct.hinic_cmdq_direct_wqe = type { %struct.hinic_cmdq_wqe_scmd }
%struct.hinic_cmdq_wqe_scmd = type { %struct.hinic_ctrl }
%struct.hinic_ctrl = type { i64 }
%struct.hinic_cmdq_wqe_lcmd = type { %struct.hinic_ctrl }
%struct.TYPE_2__ = type { i32 }

@BUFDESC_LEN = common dso_local global i32 0, align 4
@WQE_LCMD_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hinic_cmdq*, %struct.hinic_cmdq_wqe*)* @clear_wqe_complete_bit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clear_wqe_complete_bit(%struct.hinic_cmdq* %0, %struct.hinic_cmdq_wqe* %1) #0 {
  %3 = alloca %struct.hinic_cmdq*, align 8
  %4 = alloca %struct.hinic_cmdq_wqe*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.hinic_ctrl*, align 8
  %9 = alloca %struct.hinic_cmdq_wqe_lcmd*, align 8
  %10 = alloca %struct.hinic_cmdq_direct_wqe*, align 8
  %11 = alloca %struct.hinic_cmdq_wqe_scmd*, align 8
  store %struct.hinic_cmdq* %0, %struct.hinic_cmdq** %3, align 8
  store %struct.hinic_cmdq_wqe* %1, %struct.hinic_cmdq_wqe** %4, align 8
  %12 = load %struct.hinic_cmdq_wqe*, %struct.hinic_cmdq_wqe** %4, align 8
  %13 = call %struct.TYPE_2__* @CMDQ_WQE_HEADER(%struct.hinic_cmdq_wqe* %12)
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @be32_to_cpu(i32 %15)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* @BUFDESC_LEN, align 4
  %19 = call i32 @HINIC_CMDQ_WQE_HEADER_GET(i32 %17, i32 %18)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @cmdq_wqe_size_from_bdlen(i32 %20)
  store i32 %21, i32* %7, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @WQE_LCMD_SIZE, align 4
  %24 = icmp eq i32 %22, %23
  br i1 %24, label %25, label %30

25:                                               ; preds = %2
  %26 = load %struct.hinic_cmdq_wqe*, %struct.hinic_cmdq_wqe** %4, align 8
  %27 = getelementptr inbounds %struct.hinic_cmdq_wqe, %struct.hinic_cmdq_wqe* %26, i32 0, i32 1
  store %struct.hinic_cmdq_wqe_lcmd* %27, %struct.hinic_cmdq_wqe_lcmd** %9, align 8
  %28 = load %struct.hinic_cmdq_wqe_lcmd*, %struct.hinic_cmdq_wqe_lcmd** %9, align 8
  %29 = getelementptr inbounds %struct.hinic_cmdq_wqe_lcmd, %struct.hinic_cmdq_wqe_lcmd* %28, i32 0, i32 0
  store %struct.hinic_ctrl* %29, %struct.hinic_ctrl** %8, align 8
  br label %37

30:                                               ; preds = %2
  %31 = load %struct.hinic_cmdq_wqe*, %struct.hinic_cmdq_wqe** %4, align 8
  %32 = getelementptr inbounds %struct.hinic_cmdq_wqe, %struct.hinic_cmdq_wqe* %31, i32 0, i32 0
  store %struct.hinic_cmdq_direct_wqe* %32, %struct.hinic_cmdq_direct_wqe** %10, align 8
  %33 = load %struct.hinic_cmdq_direct_wqe*, %struct.hinic_cmdq_direct_wqe** %10, align 8
  %34 = getelementptr inbounds %struct.hinic_cmdq_direct_wqe, %struct.hinic_cmdq_direct_wqe* %33, i32 0, i32 0
  store %struct.hinic_cmdq_wqe_scmd* %34, %struct.hinic_cmdq_wqe_scmd** %11, align 8
  %35 = load %struct.hinic_cmdq_wqe_scmd*, %struct.hinic_cmdq_wqe_scmd** %11, align 8
  %36 = getelementptr inbounds %struct.hinic_cmdq_wqe_scmd, %struct.hinic_cmdq_wqe_scmd* %35, i32 0, i32 0
  store %struct.hinic_ctrl* %36, %struct.hinic_ctrl** %8, align 8
  br label %37

37:                                               ; preds = %30, %25
  %38 = load %struct.hinic_ctrl*, %struct.hinic_ctrl** %8, align 8
  %39 = getelementptr inbounds %struct.hinic_ctrl, %struct.hinic_ctrl* %38, i32 0, i32 0
  store i64 0, i64* %39, align 8
  %40 = call i32 (...) @wmb()
  ret void
}

declare dso_local i32 @be32_to_cpu(i32) #1

declare dso_local %struct.TYPE_2__* @CMDQ_WQE_HEADER(%struct.hinic_cmdq_wqe*) #1

declare dso_local i32 @HINIC_CMDQ_WQE_HEADER_GET(i32, i32) #1

declare dso_local i32 @cmdq_wqe_size_from_bdlen(i32) #1

declare dso_local i32 @wmb(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
